spacing fix

--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,7 @@
   height: 5vmin;
   width: 5vmin;
   background-color: transparent;
+  margin-bottom: 2em;
 }
 
 .App-title {
@@ -79,6 +80,5 @@
 }
 
 .results {
-  min-height: 100vh;
   width: 100vw;
 }
